dipper: switch to NfcNci and NFC 1.1
* Remove NQ NFC stuff and use NfcNci
* libnfc-brcm_NCI2_0.conf -> libnfc-nci.conf + NFC 1.1 changes - works fine in /system/etc.
* libnfc-nxp.conf + NFC 1.1 changes - mount over /vendor/etc/libnfc-nxp.conf, for now.
* HIDL: 1.0 INfc -> 1.1 INfc, stop mounting manifest.xml over /vendor/etc/vintf/manifest.xml
* Build NFC vendor HALs as we are going to build vendor image in the near future:
- android.hardware.nfc@1.1-service
- android.hardware.secure_element@1.0-service

Test: boot, enable nfc, try to read a mifare card
Change-Id: I082ab15b044640465f8b615fbdd466bdd8a8c4b2
Signed-off-by: argraur <argraur@gmail.com>
Signed-off-by: Henrique Pereira <pereirah2001@gmail.com>

--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -1,4 +1,4 @@
 on init
-    mount none /system/etc/manifest.xml /vendor/etc/vintf/manifest.xml bind
     mount none /system/etc/qdcm_calib_data_gvo_fhd_cmd_dsi_panel.xml /vendor/etc/qdcm_calib_data_gvo_fhd_cmd_dsi_panel.xml bind
     mount none /system/etc/qdcm_calib_data_ss_notch_fhd_cmd_dsi_panel.xml /vendor/etc/qdcm_calib_data_ss_notch_fhd_cmd_dsi_panel.xml bind
+    mount none /system/etc/nfc/libnfc-nxp.conf /vendor/etc/libnfc-nxp.conf bind
